Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6201

Updates to Timer properties while it is running cause the timer to stop

    XMLWordPrintable

Details

    • 3c5f260

    Description

      Changing a Timer property – for example 'interval' – while it is running will cause the timer to stop.

      This is because the property changes call update(), which calls stop() on the animation, which triggers a stateChanged(), which sets running to false.

      See http://labs.trolltech.com/forums/topic/1481?replies=1 for an example.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            brasser Michael Brasser (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes