Fix changing Timer interval while running.

Task-number: QTBUG-6201